tests/errors/shadowing_func.sbr
let main = () => {
  let foo = () => {
    printString("foo");
  }
  let foo = 20;
}

export main;